# python_ml

./: README.md  main.py  newsummerizer.py  pyproject.toml  textsummery.py
